[package]
name = "krunner-rink"
version = "1.0.0"
edition = "2024"
authors = ["Dominique Hummel <naxdy@naxdy.org>"]
repository = "https://github.com/Naxdy/krunner-rink"
license = "GPL-3.0"
description = "Adding the unit-aware calculator Rink to KRunner."

[package.metadata.krunner]
service = "org.naxdy.krunner_rink"
path = "/krunner_rink"

[dependencies]
cli-clipboard = "0.4.0"
eyre = "0.6.12"
krunner = { version = "0.1.1", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rink-core = { version = "0.8.0", features = ["bundle-files"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
strip = true
lto = true
